<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.detail.DetailFragment">

    <ScrollView
        android:id="@+id/sv_movie_detail"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/iv_movie"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_detail_iv_height"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:background="@drawable/gradient_shadow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/iv_movie"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_back_button"
                    android:layout_width="@dimen/top_bar_icon_size"
                    android:layout_height="@dimen/top_bar_icon_size"
                    android:background="@drawable/oval_btn_background"
                    android:padding="8dp"
                    android:src="@drawable/back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_watch_button"
                    android:layout_width="@dimen/top_bar_icon_size"
                    android:layout_height="@dimen/top_bar_icon_size"
                    android:background="@drawable/oval_btn_background"
                    android:padding="8dp"
                    android:visibility="gone"
                    android:src="@drawable/play_circle_outline_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginHorizontal="4dp"
                    app:layout_constraintEnd_toStartOf="@id/iv_fav_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/iv_fav_button"
                    android:layout_width="@dimen/top_bar_icon_size"
                    android:layout_height="@dimen/top_bar_icon_size"
                    android:background="@drawable/oval_btn_background"
                    android:padding="8dp"
                    android:src="@drawable/favorite_border_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_app"
                android:textSize="@dimen/movie_name_text_size"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout_score_time"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout_score_time"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout_score_time"
                />
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_score_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_movie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            
                <TextView
                    android:id="@+id/tv_movie_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8.0"
                    android:textSize="@dimen/movie_info_text_size"
                    android:fontFamily="@font/ubuntu_bold"
                    app:drawableStartCompat="@drawable/star_24"
                    app:drawableTint="@color/gold"
                    android:textColor="@color/white"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/tv_movie_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="120"
                    android:textSize="@dimen/movie_info_text_size"
                    android:fontFamily="@font/ubuntu_bold"
                    android:layout_marginStart="8dp"
                    app:drawableStartCompat="@drawable/time_24"
                    app:drawableTint="@color/white"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:drawablePadding="5dp"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_movie_score"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/tv_movie_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2023"
                    android:textSize="@dimen/movie_info_text_size"
                    android:fontFamily="@font/ubuntu_bold"
                    android:layout_marginStart="8dp"
                    app:drawableStartCompat="@drawable/date_24"
                    app:drawableTint="@color/white"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:drawablePadding="5dp"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_movie_time"
                    app:layout_constraintTop_toTopOf="parent"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout_score_time"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout_score_time" />


            
            <TextView
                android:id="@+id/tv_summary_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:textSize="@dimen/movie_detail_title"
                android:textColor="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/rv_category"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ubuntu_light"
                android:text="Content Content Content Content Content Content Content Murat Content Content Content Content Content Content Content Content"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="@dimen/movie_detail_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_summary_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_summary_title" />

            <TextView
                android:id="@+id/tv_review_see"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_reviews"
                android:layout_marginTop="16dp"
                android:padding="@dimen/movie_review_button_padding"
                android:background="@drawable/rounded_text_background_reviews"
                android:textSize="@dimen/movie_detail_text_size"
                android:drawablePadding="5dp"
                android:visibility="gone"
                android:fontFamily="@font/ubuntu_medium"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/review_24"
                app:layout_constraintTop_toBottomOf="@+id/tv_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_actors_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actors"
                android:layout_marginTop="16dp"
                android:textSize="@dimen/movie_detail_title"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/tv_review_see"
                app:layout_constraintStart_toStartOf="@+id/tv_summary"/>

            <TextView
                android:id="@+id/tv_actors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Actor Name, Actor Name, Actor Name"
                android:layout_marginTop="8dp"
                android:textSize="@dimen/movie_detail_text_size"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:fontFamily="@font/ubuntu_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_actors_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_actors_title"/>
            
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_actors"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_actors"
                app:layout_constraintTop_toBottomOf="@+id/tv_actors" />

            <TextView
                android:id="@+id/tv_recommendations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommendations"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/movie_detail_title"
                android:textColor="@color/gray"
                android:fontFamily="@font/ubuntu_bold"
                app:layout_constraintStart_toStartOf="@+id/rv_actors"
                app:layout_constraintTop_toBottomOf="@+id/rv_actors"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommendations"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_recommendations"
                app:layout_constraintTop_toBottomOf="@+id/tv_recommendations" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        app:trackColor="@color/black"
        app:indicatorColor="@color/red"
        app:indicatorSize="60dp"
        app:trackThickness="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar_actor_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        app:trackColor="@color/black"
        app:indicatorColor="@color/red"
        app:indicatorSize="60dp"
        app:trackThickness="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>